fix mobile layout bugs

--- a/src/Form.scss
+++ b/src/Form.scss
@@ -34,5 +34,11 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
+}
+@media(max-width:600px){
+    .form{
+        width: 90%;
+        margin-bottom: 10vh;
+    }
 }
